--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,17 @@
-PEAxODDS coming soon.. ⏰ touchavin
+<div class="content">
+  <span>{{title}}</span>
+</div>
+<div>
+  count: {{count}}
+</div>
+
+
+
+
+<tts-profile
+  (counter)="onClick(2)">
+</tts-profile>
+<tts-profile
+  [emoji]="'☀️'"
+  (counter)="onClick($event)">
+</tts-profile>
